--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ html {
 
 .app {
   height: 100vh;
-  background-color: #000;
+  background-color: rgb(0, 0, 0);
   display: grid;
   place-items: center;
 }
