--- a/src/components/FooterLeft.css
+++ b/src/components/FooterLeft.css
@@ -1,29 +1,20 @@
 .footer-container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
+  margin-bottom: 0px; /* Removed extra space */
+  position: absolute;
+  bottom: 10px; /* Move it closer to the bottom */
+  left: 10px;
+  right: 10px;
 }
 
 .footer-left {
-  position: relative;
-  color: white;
-  flex-grow: 1;
-  pointer-events: none;
   display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* Pushes username lower */
+  align-items: flex-start;
   margin-left: 5px;
-}
-
-.ticker {
-  height: fit-content;
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.ticker marquee {
-  display: flex;
-  align-items: center;
-  width: 100%;
+  flex-grow: 0;
 }
 
 .text {
@@ -33,16 +24,15 @@
 .text h3 {
   font-size: 18px;
   font-weight: 700;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
+  position: relative;
+  bottom: -5px; /* Moves username slightly lower */
+  color: white;
 }
 
 .text p {
   font-size: 14px;
   font-weight: 500;
-}
-
-.text span {
-  font-size: 12px;
-  font-weight: 400;
-  color: #fff;
+  margin-bottom: 5px;
+  color:white;
 }
