--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,12 @@
 html {
   scroll-snap-type: y mandatory;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #000;
+  font-family: "Montserrat", sans-serif;
+  background-color: #ffffff;
 }
 
 .app {
   height: 100vh;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   display: grid;
   place-items: center;
 }
@@ -55,7 +55,7 @@ html {
 }
 
 .top-navbar h2 span::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: -2px;
@@ -64,7 +64,6 @@ html {
   background-color: #fff;
   transform: translateX(50%);
 }
-
 
 .top-navbar .icon {
   font-size: 16px;
@@ -95,7 +94,7 @@ html {
   color: #d4d3d3;
 }
 
-.bottom-navbar .plus{
+.bottom-navbar .plus {
   background-color: #fff;
   color: #161616;
   padding: 5px 10px;
